# it-nation-intro

./: pyproject.toml
it_nation_intro/: Ifelseif.py  Stroka.py  abbrs.py  and_or.py  chek_numbers.py  cikl_while.py  cikli_for_while.py  combine_lists.py  datatype.py  fruit.py  get_largest_expression_result.py  get_list_sum.py  get_success_rate.py  get_three_largest.py  get_unique_items.py  input_name.py  is_jumping.py  is_palindrome.py  is_special_number.py  is_tidy.py  main.py  make_abbr.py  massiv.py  mathamatics.py  mathatics.py  myfunction.py  perevorot.py  perevorot_target.py  scroling_text.py  sortirovka.py  split_stringa.py  srtinga.py  stringa_stroka.py  sum_list_items.py  work_srting.py
tests/: test_it_nation_intro.py
tests/selene_intro/: first_test.py  firsttestselenide.py
tests/selenium_intro/: google_search_test.py  itnation_selenium_test.py  test_itnation_selenium.py
