[tool.poetry]
name = "it-nation-intro"
version = "0.1.0"
description = ""
authors = ["AlexandrServal <alexserval13@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
selene = "^2.0.0a40"


[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
